# tts-biglinux

./: README.md  pyproject.toml
.audit/: files_read.txt  mypy.txt  radon.txt  ruff_check.txt  ruff_format.txt  vulture.txt
.github/workflows/: translate-and-build-package.yml
.serena/: project.yml
locale/: bg.json  bg.po  cs.po  da.po  de.json  de.po  el.po  en.json  en.po  es.json  es.po  et.json  et.po  fi.json  fi.po  fr.json  fr.po  he.json  he.po  hr.json  hr.po  hu.json  hu.po  is.json  is.po  it.po  ja.json  ja.po  ko.json  ko.po  nl.json  nl.po  no.po  pl.json  pl.po  pt-BR.po  pt.po  ro.po  ru.json  ru.po  (+9 more)
pkgbuild/: PKGBUILD
src/biglinux_tts/: __init__.py  __main__.py  application.py  config.py  main.py  window.py
src/biglinux_tts/resources/: __init__.py  style.css
src/biglinux_tts/services/: __init__.py  settings_service.py  text_processor.py  tts_service.py  voice_manager.py
src/biglinux_tts/ui/: __init__.py  components.py  main_view.py
src/biglinux_tts/utils/: __init__.py  i18n.py
usr/share/applications/: bigtts.desktop  br.com.biglinux.tts.desktop
usr/share/biglinux/tts-biglinux/: application.py  config.py  main.py  window.py
usr/share/biglinux/tts-biglinux/services/: clipboard_service.py  desktop_integration_service.py  settings_service.py  tray_service.py  tts_service.py  voice_manager.py
usr/share/biglinux/tts-biglinux/ui/: components.py  main_view.py  welcome_dialog.py
usr/share/biglinux/tts-biglinux/utils/: async_utils.py
usr/share/khotkeys/: ttsbiglinux.khotkeys
usr/share/locale/bg/LC_MESSAGES/: tts-biglinux.json  tts-biglinux.mo
usr/share/locale/cs/LC_MESSAGES/: tts-biglinux.json  tts-biglinux.mo
usr/share/locale/da/LC_MESSAGES/: tts-biglinux.json  tts-biglinux.mo
usr/share/locale/de/LC_MESSAGES/: tts-biglinux.json  tts-biglinux.mo
usr/share/locale/el/LC_MESSAGES/: tts-biglinux.json  tts-biglinux.mo
(+53 files in other folders)
